# AOHashes

./: .gitignore  Cargo.toml  README.md
benches/: decrypt.rs  encrypt.rs  hash.rs
docs/report/: aohashes.bib  aohashes.tex  preamble.tex  report.aux  report.dvi  report.fdb_latexmk  report.fls  report.out.ps  report.tex  report.toc
docs/report/bib/: aohashes.bib
docs/report/drawio/: poseidon.drawio
docs/report/tikz/: plain.tikz  proof.tikz
examples/: hash_example.rs
src/: encryption.rs  error.rs  hash.rs  lib.rs  permutation.rs
src/encryption/: gadget.rs
src/hash/: gadget.rs
src/permutation/: anemoi.rs  arion.rs  gmimc.rs  griffin.rs  poseidon.rs  rescue.rs  rescue_prime.rs
src/permutation/anemoi/: gadget.rs  params.rs  scalar.rs
src/permutation/arion/: gadget.rs  params.rs  scalar.rs
src/permutation/gmimc/: gadget.rs  params.rs  scalar.rs
src/permutation/griffin/: gadget.rs  params.rs  scalar.rs
src/permutation/poseidon/: gadget.rs  params.rs  scalar.rs
src/permutation/rescue/: gadget.rs  params.rs  scalar.rs
src/permutation/rescue_prime/: gadget.rs  params.rs  scalar.rs
tests/: encryption.rs  encryption_gadget.rs  hash.rs
