[package]
name = "aohashes"
version = "0.1.0"
description = "Implementation of Arimethization-Oriented Hashing functions over the BLS12-381 curve, using Dusk-Plonk library for zk proofs."
categories = ["algorithms", "cryptography", "no-std", "wasm"]
keywords = ["cryptography", "zero-knowledge", "crypto"]

repository = "https://github.com/Crisis82/ao-hashes/"
edition = "2024"

[dependencies]
dusk-bls12_381 = { version = "0.14.1", default-features = false, features = ["zeroize"] }
dusk-jubjub = { version = "0.15.0", default-features = false }
dusk-plonk = { version = "0.21", default-features = false, features = ["alloc", "zeroize"], optional = true }
dusk-safe = "0.3.0"
cfg-if = "1.0.0"
lazy_static = "1.5.0"
sha2 = {version = "0.10.8", optional = true}
sha3 = {version = "0.10.8", optional = true}
ndarray = {version = "0.16.1", optional = true}
ethnum = {version = "1.5.0", optional = true}
ff = {version = "0.13", optional = true}
rand = {version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"], optional = true}

[dev-dependencies]
criterion = "0.5"
dusk-bytes = "0.1"
once_cell = "1"
rand = {version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"]}
ff = "0.13"

[features]
anemoi = ["ethnum"]
arion = ["ethnum", "ff", "rand"]
gmimc = ["sha3"]
griffin = ["ethnum", "sha3", "ndarray"]
poseidon = ["sha2"]
rescue = ["ethnum", "sha3"]
rescue_prime = ["ethnum", "sha3"]
zk = ["dusk-plonk"]
encryption = ["dusk-safe/encryption"]

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.release]
debug = false
panic = 'abort'
lto = true
incremental = false
codegen-units = 1

[[bench]]
name = "hash"
harness = false
required-features = ["zk"]

[[bench]]
name = "encrypt"
harness = false
required-features = ["zk", "encryption"]

[[bench]]
name = "decrypt"
harness = false
required-features = ["zk", "encryption"]
